# hierro2d

./: Cargo.toml
examples/: view.rs
src/: app.rs  backend.rs  component.rs  context.rs  event.rs  lib.rs  shader.wgsl  state.rs  vertex.rs  winit.rs
src/component/: common.rs  container.rs  empty.rs  mod.rs  square.rs  text.rs
src/component/img/: api.rs  bind_group.rs  img.wgsl  mod.rs  texture.rs  util.rs  vertex.rs
src/component/rect/: api.rs  bind_group.rs  mod.rs  rect.wgsl  util.rs  vertex.rs
src/component/square/: mod.rs
src/component/text/: api.rs  config.rs  mod.rs  renderer.rs
