[package]
name = "hierro2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

winit = "0.29.15"
env_logger = "0.11.3"
log = "0.4.21"
wgpu = "0.19.3"
tokio = { version = "1.36.0", features = ["full"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
anyhow = "1.0"
glyphon = "0.5.0"

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]
